[package]
name = "oozz"
version = "0.4.1"
description = "A CLI program that takes input and renders it in an ANSI art font, and adds some colored oozz."
authors = ["Daniel Berg <mail@roosta.sh>"]
repository =  "https://github.com/roosta/oozz"
documentation =  "https://github.com/roosta/oozz"
readme = "README.md"
keywords = ["ansi", "terminal", "font", "linux", "commandline"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
exclude = ["TODOs.org*", "script"]

[badges]
travis-ci = { repository = "roosta/oozz" }

[dependencies]
rand = "0.3.17"
regex = "0.2"
clap = "2.26.2"
lazy_static = "0.2.9"
term_size = "0.3"
